--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/ssm_demo?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=****
 mybatis.mapper-locations=*.xml
 mybatis.type-aliases-package=com.example.ssm_demo.entity
